# aitester-bdd

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/: changelog.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: actions.md  configuration.md  rule-composition.md  running-tests.md  state-checks.md  writing-suites.md
docs/internals/: architecture.md  aspects.md  authoring.md  backends.md  exploration-driver-map.md  plan-then-execute.md  planning-experiment-log.md  walker.md
docs/reference/: cli.md  env-vars.md  keywords.md
examples/explore_fluid/: explore_settings.robot
examples/login_flow/: README.md  login_flow.robot
examples/shell_assertions/: api_health.robot
specs/01-explore-author-planning/: eval-ab-2026-06-15-clean.tsv  eval-ab-2026-06-15.tsv  spec.md
specs/02-fastfail-exploration-probing/: spec.md
src/aitester_bdd/: AITester.py  __init__.py  cli.py
src/aitester_bdd/authoring/: agent_loop.py  playwright_tools.py  tools.py
src/aitester_bdd/engine/: README.md  __init__.py  agent_browser_backend.py  aspects.py  browser.py  context.py  emit.py  nodriver_backend.py  verdict.py  walk.py  walk_log.py
src/aitester_bdd/llm/: aiagent_adapter.py  base.py
src/aitester_bdd/skill/: SKILL.md
tests/unit/: test_artifact_pipeline.py  test_keyword_library.py  test_walker_with_fake_browser.py  test_wise_ported_gotchas.py
