[project]
name = "aitester-bdd"
version = "0.2.0"
description = "LLM-driven BDD test authoring for Robot Framework — turn an intention + live app into a .robot suite"
readme = "README.md"
authors = [{ name = "kundeng" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["robotframework", "bdd", "testing", "llm", "ai", "test-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing :: BDD",
]
dependencies = [
    # Robot Framework — runtime test executor for the .robot suites the
    # authoring agent emits.
    "robotframework>=7.0",
    # Authoring-time agent loop. DeepAgents wraps LangGraph and provides
    # TodoList + Filesystem + Shell tools out of the box. The agent shells
    # out to the `agent-browser` CLI for the live browser work — no Python
    # Playwright dependency in the base install.
    "deepagents>=0.0.15",
    "langgraph>=0.2.50",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    # In-walker semantic / visual_semantic escape hatch (one-shot LLM call,
    # no tools at run time) — litellm is the simple multi-provider client.
    "litellm>=1.50",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Playwright runtime backend (in-process). Pick this when subprocess latency
# matters for action-heavy suites. Install + run once:
#   pip install aitester-bdd[playwright]
#   rfbrowser init       # downloads ~300MB of browsers
# Then declare ${ENGINE}    playwright in your suite.
playwright = [
    "robotframework-browser>=18.0",
    "playwright>=1.45",
]
# nodriver runtime backend — raw CDP via Chrome/Edge.
# Useful for:
#   1. Bot-detected sites (DataDome / Cloudflare BM / etc.) — no Playwright
#      fingerprint, so detection heuristics targeting Playwright miss.
#   2. Environments where rfbrowser init's ~300MB browser download is undesirable.
# Pick by installing this extra and declaring ${ENGINE}    nodriver in your suite.
stealth = [
    "nodriver>=0.40",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
aitester = "aitester_bdd.cli:app"

[project.urls]
Homepage = "https://github.com/kundeng/aitester-bdd"
Repository = "https://github.com/kundeng/aitester-bdd"
Issues = "https://github.com/kundeng/aitester-bdd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aitester_bdd"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = [
    "E501",  # line length handled by formatter
    "E701",  # one-liner keyword aliases are intentional (Given/And/Then variants)
    "N999",  # AITester.py — Robot Framework convention
    "N802",  # BrowserAdapter is a factory named like its return type
]

[tool.ruff.lint.per-file-ignores]
"src/aitester_bdd/AITester.py" = ["E701"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.6",
]
